--- a/anniversari.html
+++ b/anniversari.html
@@ -123,10 +123,10 @@
                         </div>
                         <div class="portfolio-one-text">
                             <h3 class="title">Gli anniversari</h3>
-                            <em class="subtitle">Da tenere sempre in mente</em><br>
+                            <em class="subtitle">Da non dimenticare</em><br>
 							<br>
-                            <p class="half-bottom"><p>La tradizione ha assegnato particolari denominazioni agli anniversari di matrimonio, soprattutto con il crescere dell’importanza commerciale della festa. <b>Le principali ricorrenze sono il 25° anniversario, denominato nozze d’argento e il 50° anniversario, che prende il nome di nozze d’oro.</b></p><p>
-Esistono diversi nomi particolari per i vari anniversari. Ecco un elenco con il nome dato agli vari anniversari, anche se cambia di zona in zona: </p>
+                            <p class="half-bottom"><p>Forse non tutti sanno che ogni anniversario di matrimonio ha una particolare denominazione, frutto di tradizioni che si sono tramandate di generazione in generazione e della sempre maggiore importanza commerciale di questo evento. <b>Sicuramente i più sapranno che il 25° anniversario di matrimonio prende il nome di nozze d’argento mentre il 50° viene festeggiato con delle nozze d’oro</b>ma chi sa come si chiama il 5° anniversario di matrimonio? E il 10°?</p>
+							<p>Il mistero è presto svelato! Ecco un elenco che, seppur variabile da zona a zona, soddisferà certamente la curiosità di quanti vogliono conoscere la particolare denominazione dei diversi anniversari di matrimonio: </p>
 <ul class="list-orizz">
 <li>1° Cotone  </li>
 <li>2° Carta</li>
