--- a/bomboniera.html
+++ b/bomboniera.html
@@ -123,9 +123,10 @@
                         </div>
                         <div class="portfolio-one-text">
                             <h3 class="title">La Bomboniera</h3>
-                            <em class="subtitle">Il dono di ringraziamento degli sposi</em><br>
+                            <em class="subtitle">Ovvero il mezzo per ringraziare tutti gli invitati</em><br>
 							<br>
-                            <p class="half-bottom">Questo prezioso oggetto nasce come dono di ringraziamento degli sposi a tutti coloro che partecipano al festeggiamento del matrimonio, considerata ricordo concreto che rimmarrà nel tempo…ma <b>le sue origni risalgono alla lingua francese come bon.bon (dolcetto) e arriva in Italia alla fine del Xv sec. Quando i nobili erano soliti portare con sé cofanetti con dolci e caramelle a base di zucchero</b>..dobbiamo però attendere il 1700 affinchè la bomboniera diventi parte della tradizione italiana, solo con le nozze tra Vittorio Emanuele, principe di Napoli e Elena del Montenegro che la bomboniera diventa oggetto di dono degli sposi agli invitati.
+                            <p class="half-bottom">La bomboniera è un oggetto prezioso nato come dono di ringraziamento agli invitati per aver partecipato ai festeggiamenti. Viene offerta dagli sposi e rappresenta un ricordo fisico, tangibile, di una bellissima e magica giornata, quella del matrimonio. 
+                                                   Quali sono le <b>origini</b> di questo particolare oggetto? Ebbene, esse <b>risalgono alla lingua francese, al bon bon (dolcetto). In Italia la bomboniera non arriverà che alla fine del XV° secolo, quando i nobili presero l’abitudine di portare con sé dolci e caramelle racchiusi in cofanetti</b> e bisognerà aspettare fino al 1700 per poter dire che la bomboniera sia entrata ufficialmente a far parte della tradizione italiana. Infatti, è solo con le nozze tra Vittorio Emanuele, principe di Napoli e Elena del Montenegro che la bomboniera diventa un oggetto offerto in dono dagli sposi agli invitati. 
                             </p> 
 								
 							<!--
