--- a/bouquet.html
+++ b/bouquet.html
@@ -123,10 +123,11 @@
                         </div>
                         <div class="portfolio-one-text">
                             <h3 class="title">Il Bouquet</h3>
-                            <em class="subtitle">L'ultimo omaggio del fidanzato</em><br>
+                            <em class="subtitle">Un ultimo omaggio del fidanzato</em><br>
 							<br>
                             <p class="half-bottom">
-                                Secondo la tradizione il bouquet e l'ultimo omaggio dello sposo per la sposa come fidanzato. Lo sposo lo deve comprare e che lo faccia recapitare al mattino a casa della sposa; in realtà è la sposa a sceglierlo in quanto deve armonizzarlo con suo abito. <br><br>Alla fine della cerimonia, la sposa lancia il suo bouquet di fiori verso un gruppo di donne nubili, che competono per afferrarlo; secondo la tradizione la donna che prende il bouquet avrà la fortuna di essere la prossima a sposarsi. 
+                               Il bouquet viene scelto dalla sposa perché si deve abbinare all’abito ma in realtà, per tradizione, esso rappresenta l’ultimo omaggio che lo sposo dona alla sua donna in veste di fidanzato. Infatti, dovrebbe essere l’uomo a comprare e a far recapitare alla futura sposa questo particolare mazzo di fiori la mattina delle nozze ma, poiché lo sposo non può vedere l’abito della sua lei prima del fatidico giorno, per motivi di comodità è direttamente la sposa a scegliersi il bouquet.   <br><br>Alla fine della cerimonia, come molte donzelle sapranno, la sposa lancia il suo bouquet e, secondo tradizione, la donna nubile che riesce ad afferrarlo avrà la fortuna di essere sarà la successiva sposa. 
+ 
                             </p>            
 							<!--
                             <div class="portfolio-one-links">
