--- a/colore.html
+++ b/colore.html
@@ -123,21 +123,21 @@
                         </div>
                         <div class="portfolio-one-text">
                             <h3 class="title">Il colore del vestito</h3>
-                            <em class="subtitle">Come scegliere il colore del vestito</em><br>
+                            <em class="subtitle">Un colore, un significato</em><br>
 							<br>
-                            <p class="half-bottom">Per la scelta del colore del vestito da sposa, ci sono superstizioni popolari che indicano quali sono quelli fortunati e quelli da evitare.</p>
+                            <p class="half-bottom">Bianco, rosa, rosso o blu…? Quale colore scegliere per il proprio abito da sposa? Un piccolo aiuto viene da questa lista. Infatti, esistono superstizioni popolari che indicano quali colori indossare e quali invece è meglio evitare.</p>
                 <ul class=" list">
-                    <li style="padding: 5px">il più favorito anche dalla sorte è ovviamente il bianco; </li>
-                    <li style="padding: 5px">il blu indica sincerità da parte della sposa; </li>
+                    <li style="padding: 5px">il più favorito anche dalla sorte è ovviamente il bianco poiché indica purezza, innocenza;  </li>
+                    <li style="padding: 5px">il blu indica sincerità ed onestà da parte della sposa;  </li>
                     <li style="padding: 5px">il verde timidezza; </li>
-                    <li style="padding: 5px">il nero pentimento; </li>
-                    <li style="padding: 5px">l'avorio preannuncia una vita turbolenta; </li>
-                    <li style="padding: 5px">il marrone e il grigio predicono che gli sposi andranno a vivere lontano o in campagna; </li>
-                    <li style="padding: 5px">il rosa predice una perdita economica; </li>
-                    <li style="padding: 5px">il rosso è desiderio di morte;</li>
-                    <li style="padding: 5px">il giallo mancanza di stima da parte della sposa. </li>
+                    <li style="padding: 5px">il nero è legato al pentimento;  </li>
+                    <li style="padding: 5px">l’avorio è segno di una vita futura turbolenta;  </li>
+                    <li style="padding: 5px">il marrone e il grigio predicono che gli sposi andranno a vivere lontano o in campagna;  </li>
+                    <li style="padding: 5px">il rosa significa perdita economica; </li>
+                    <li style="padding: 5px">il rosso è il colore della passione, ma anche del desiderio di morte;</li>
+                    <li style="padding: 5px">il giallo mancanza di stima da parte della sposa.  </li>
                 </ul>
-                <p>Tutti gli invitati sono tenuti ad evitare il colore bianco per il loro abbigliamento, così come sarebbe, per tradizione, da evitare il nero, anche se oggi quest'ultimo colore è molto usato, soprattutto nel caso di ricevimenti serali.</p>
+                <p>Il Bon Ton suggerisce a tutti gli invitati di evitare sicuramente il colore bianco per il loro abbigliamento, così come sarebbe, per tradizione, da evitare il nero, legato al lutto. Tuttavia al giorno d’oggi questo colore viene molto usato, specie nei ricevimenti serali, in quanto viene considerato come il più elegante.</p>
                 
                             </p> 
 								
