--- a/confetti.html
+++ b/confetti.html
@@ -123,14 +123,15 @@
                         </div>
                         <div class="portfolio-one-text">
                             <h3 class="title">I Confetti</h3>
-                            <em class="subtitle">Un dono goloso</em><br>
+                            <em class="subtitle">Un pensiero delizioso</em><br>
 							<br>
                             <p class="half-bottom">
-                               Ma lo sapevate che i confetti nelle bomboniere e nei sacchettini dovrebbero sempre essere <b>dispari</b>, di <b>numero indivisibile</b> come il matrimonio!!!<br><br>
+                               Il confetto è considerato speciale come l’evento di cui è simbolo, per questo dovrebbe essere preferibilmente alle mandorla intera, morbido e con un gusto pieno.<br><br>
 
-Il confetto è considerato speciale come l’evento di cui è simbolo, per questo dovrebbe essere morbido, con un gusto pieno e preferibilmente alle mandorla intera.<br><br>
+							Ma quanti di voi sanno che i confetti nelle bomboniere e nei sacchettini, essendo simboli del matrimonio, dovrebbero sempre essere <b>dispari</b> e di <b>numero indivisibile</b>?<br><br>
 
-Cinque sono le qualità che non dovrebbero mai mancare nella vita degli sposi: <strong>salute, ricchezza, felicità, lunga vita, fertilità e spiritualità</strong>, quindi il numero di confetti varierà da un <strong>numero di tre ad un massimo di cinque</strong>.
+							Il numero ideale è di tre o cinque confetti, perché tali sono le cose importanti che non dovrebbero mai mancare nella vita degli sposi: <b>felicità, salute, fertilità, ricchezza, , lunga vita e spiritualità</b>. 
+
                             </p> 
 								
 							<!--
