--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
                 <div class="decoration"></div>
                 <div class="one-half-responsive">
                     <h4>Contattaci</h4>
-                    <p>Se vuoi contattarci per esporci dei dubbi, avere informazioni o richiedere uno spazio sponsor su questa o altre APP, non esitare a contattarci!<br><br>Ti ricordiamo che SiGi Technologies sviluppa applicazioni come questa anche per la tua azienda, crea una app e fatti conoscere!</p>
+                    <p>Se vuoi contattarci per esporci dei dubbi, avere informazioni o richiedere uno spazio sponsor su questa o altre APP, non esitare a contattarci!<br><br>Ti ricordiamo che SiGi Technologies sviluppa applicazioni come questa anche per la tua azienda.<br> <b>Crea una app e fatti conoscere!</b></p>
                     <div class="container no-bottom">
                         <div class="contact-form no-bottom"> 
                         
