--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <p class="thumb-left no-bottom">
                             <img src="images/pictures/1s.jpg" alt="img">
                             <strong>Una cosa nuova</strong>
-                            <em><br>Simboleggia la nuova vita che sta per iniziare, tutte le nuove sfide che questa porterà con sé (un capo di biancheria intima o l'abito stesso). </em>
+                            <em><br>Simboleggia la nuova vita che sta per iniziare e tutte le nuove sfide che questa porterà con sé. Può essere rappresentata da un capo di biancheria intima o dall'abito stesso.  </em>
                         </p>
                         <div class="thumb-clear"></div>
                     </div>
@@ -173,8 +173,7 @@
                         <p class="thumb-right no-bottom">
                             <img src="images/pictures/2s.jpg" alt="img">
                             <strong>Una cosa vecchia</strong>
-                            <em><br>Simboleggia il passato, che si lascia alle spalle. 
-							La sposa deve portare con sé un oggetto proprio del passato per non dimenticare l'importanza del passato nel nuovo cammino che si va ad intraprendere (un fermaglio per capelli ad un gioiello). </em>
+                            <em><br> Simboleggia il passato che ci si lascia alle spalle. La sposa deve portare con sé un oggetto proprio del passato per non dimenticare l'importanza del vecchio nel nuovo cammino che si va ad intraprendere. Può essere rappresentata da un fermaglio per capelli o da un gioiello.</em>
                         </p>
                         <div class="thumb-clear"></div>
                     </div>
@@ -183,7 +182,7 @@
                         <p class="thumb-left no-bottom">
                             <img src="images/pictures/3s.jpg" alt="img">
                             <strong>Una cosa prestata</strong>
-                            <em><br>Simboleggia l 'affetto delle persone care che rimangono vicine in questo passaggio dal vecchio al nuovo, una persona cara a prestare quest'oggetto. </em>
+                            <em><br>Simboleggia l'affetto delle persone care che rimangono vicine in questo passaggio dal vecchio al nuovo. Sarà una persona cara a prestare quest'oggetto. </em>
                         </p>
                         <div class="thumb-clear"></div>
                     </div>
@@ -201,7 +200,7 @@
                         <p class="thumb-left no-bottom">
                             <img src="images/pictures/5s.jpg" alt="img">
                             <strong>Una cosa blu</strong>
-                            <em><br>Simbolo di sincerità e purezza da parte della sposa ,anticamente era il colore dell' abito della sposa. Oggi molto usata è la giarrettiera decorata con un nastrino blu.  </em>
+                            <em><br>Simbolo di sincerità e purezza da parte della sposa, anticamente era il colore dell'abito nuziale. Oggi viene molto usata giarrettiera decorata con un nastrino blu.  </em>
                         </p>
                         <div class="thumb-clear"></div>
                     </div>
