--- a/matrimonio_dopo.html
+++ b/matrimonio_dopo.html
@@ -125,9 +125,10 @@
                             <h3 class="title">Dopo la cerimonia</h3>
                             <em class="subtitle">Alcune curiosità</em><br>
 							<br>
-                            <p class="half-bottom">Una delle tradizioni molto comune è quella dell’<strong>uomo che porti in braccio la sposa oltre la soglia della loro casa primo ingresso</strong>. Questa tradizione ha origine da una credenza romana che fosse meglio per la moglie non inciampare entrando nella nuova casa.<br><br>
+                            <p class="half-bottom">Una delle tradizioni più comuni è quella in cui l’<strong>uomo porta in braccio la sposa oltre la soglia della loro casa al primo ingresso</strong>. Questa tradizione ha origini romane: si credeva infatti che la neo-moglie non dovesse assolutamente inciampare varcando la soglia. <br><br>
 
-Altre piccole superstizioni comunque arrivano già molto prima del fatidico giorno….infatti anche per scegliere il giorno delle nozze ci sono superstizioni infatti un antico proverbio dice "<b>Di Venere e di Marte ne'si sposa ne' si parte</b>" cioè non sposarsi e non partire in viaggi nei giorni di Martedì e Venerdì. Il martedì appartiene a Marte che è il Dio della guerra, mentre il venerdì è il giorno in cui furono creati gli spiriti maligni. In Norvegia invece il maggior numero di matrimoni si celebra proprio il venerdì ; giorno romantico per eccellenza perché sotto la protezione di venere, dea dell'amore e dell' armonia. 
+Altre piccole superstizioni arrivano già molto prima del fatidico giorno….infatti anche per scegliere la data delle nozze bisogna prestare attenzione. Infatti, un antico proverbio afferma che “<b>Di venere e di marte né si sposa né si parte</b>” in quanto il Martedì è il giorno dedicato al Dio della guerra, mentre il Venerdì è il giorno in cui si crede furono creati gli spiriti maligni. In Norvegia invece il maggior numero di matrimoni si celebra proprio il venerdì, considerato come il momento più romantico in quanto sotto la protezione di venere, dea dell'amore e dell'armonia. 
+ 
                             </p> 
 								
 							<!--
