--- a/matrimonio_prima.html
+++ b/matrimonio_prima.html
@@ -123,19 +123,19 @@
                         </div>
                         <div class="portfolio-one-text">
                             <h3 class="title">Prima del Matrimonio</h3>
-                            <em class="subtitle">Ecco cosa si deve o non deve fare</em><br>
+                            <em class="subtitle">Cosa  fare o non fare</em><br>
 							<br>
                             <p class="half-bottom"> 
                 <ul class="list">
-                    <li style="padding: 5px;">la sposa non si deve guardare allo specchio con il vestito da sposa il giorno del matrimonio; si può fare ma togliendo una scarpa, un orecchino o un guanto. </li>
-                    <li style="padding: 5px;">il diamante regalato se portato all'anulare o al polso sinistro conserva l'affetto coniugale.</li>
-                    <li style="padding: 5px;">porta sfortuna acquistare nello stesso momento l'anello di fidanzamento e le fedi nuziali. </li>
-                    <li style="padding: 5px;">è di cattivo augurio mettersi al dito la fede prima della celebrazione del matrimonio.</li>
-                    <li style="padding: 5px;">il velo indossato dalla sposa è considerato più fortunato se donato da una sposa felice.</li>
-                    <li style="padding: 5px;">lo sposo può offrire alla sposa alla fine del rito una spiga di grano, un gesto bene augurante che fa riferimento alla terra e alla fertilità.</li>
-                    <li style="padding: 5px;">gli sposi non si devono vedere prima dell'incontro in chiesa. Ma non solo: lo sposo non deve mai vedere il vestito della sposa se non al momento della cerimonia,vederlo prima porterebbe sfortuna.</li>
-                    <li style="padding: 5px;">lo sposo già uscito di casa per recarsi in chiesa non deve tornare sui propri passi meglio avere un amico o un testimone vicino in quel giorno per aiutarvi nelle urgenze.</li>
-                    <li style="padding: 5px;">non fate cadere le fedi in chiesa, se dovessero cadere andranno raccolte solo da chi celebra il rito.</li>
+                    <li style="padding: 5px;">La sposa non si dovrebbe guardare allo specchio con l’abito nuziale il giorno del matrimonio; l’eccezione è consentita solo se  prima vengono tolti una scarpa, un orecchino o un guanto.  </li>
+                    <li style="padding: 5px;">Un diamante regalato conserva l'affetto coniugale se portato all'anulare o al polso sinistro.</li>
+                    <li style="padding: 5px;">Pochi sanno che porta sfortuna acquistare nello stesso momento l'anello di fidanzamento e le fedi nuziali.  </li>
+                    <li style="padding: 5px;">È di cattivo augurio mettersi al dito la fede prima della celebrazione del matrimonio.</li>
+                    <li style="padding: 5px;">Il velo indossato dalla sposa è considerato più fortunato se donato da una sposa felice.</li>
+                    <li style="padding: 5px;">Una spiga di grano offerta dallo sposo alla sposa alla fine della celebrazione del rito nuziale rappresenta un gesto ben augurante, in quanto il grano fa riferimento alla terra e alla fertilità.</li>
+                    <li style="padding: 5px;">Tutti sanno che a partire dalla mezzanotte del giorno prima del matrimonio, gli sposi non possono né vedersi né parlarsi fino all'incontro in chiesa. Ma non solo: lo sposo non deve mai vedere il vestito della sposa se non al momento della cerimonia. Vederlo prima porterebbe sfortuna.</li>
+                    <li style="padding: 5px;">Lo sposo già uscito di casa per recarsi in chiesa non deve tornare sui propri passi, in quanto segno di indecisione. Se si è dimenticato qualcosa  meglio avere un amico o un testimone vicino da mandare al suo posto.</li>
+                    <li style="padding: 5px;">Non bisogna far cadere le fedi in chiesa; qualora succedesse gli anelli andranno raccolte solo da chi celebra il rito.</li>
                 </ul>
                             </p> 
 								
