--- a/mese.html
+++ b/mese.html
@@ -126,18 +126,18 @@
                             <em class="subtitle">Come scegliere al meglio il Mese</em><br>
 							<br>
                             <p class="half-bottom"> <ul class="list">
-                    <li style="padding: 5px;">gennaio: porta affetto, gentilezza a fedeltà;</li>
-                    <li style="padding: 5px;">febbraio: mese ideale per gli amori e gli accoppiamenti, si identifica come la migliore scelta possibile;</li>
-                    <li style="padding: 5px;">marzo: promette sia gioia che pene;</li>
-                    <li style="padding: 5px;">aprile: porta soltanto gioie;</li>
-                    <li style="padding: 5px;">maggio: assolutamente nefasto; </li>
-                    <li style="padding: 5px;">giugno:avranno la fortuna di viaggiare molto, per terra e per mare, inoltre è questo il mese dedicato a Giunone, la dea che protegge l'amore e le nozze;</li>
-                    <li style="padding: 5px;">luglio: annuncia fatiche e lavoro per guadagnarsi la vita;</li>
-                    <li style="padding: 5px;">agosto: assicura una vita ricca di cambiamenti;</li>
-                    <li style="padding: 5px;">settembre: porta agli sposi ricchezze e allegria;</li>
-                    <li style="padding: 5px;">ottobre: porta molto amore ma poco denaro;</li>
-                    <li style="padding: 5px;">novembre: con tristi giornate, promette invece gioia e felicità; </li>
-                    <li style="padding: 5px;">dicembre: la neve assicura alla coppia amore eterno. </li>
+                    <li style="padding: 5px;">Gennaio: porta affetto, gentilezza a fedeltà;</li>
+                    <li style="padding: 5px;">Febbraio: mese ideale per gli amori e gli accoppiamenti, si identifica come la migliore scelta possibile;</li>
+                    <li style="padding: 5px;">Marzo: promette sia gioia che pene;</li>
+                    <li style="padding: 5px;">Aprile: porta soltanto gioie;</li>
+                    <li style="padding: 5px;">Maggio: assolutamente nefasto; </li>
+                    <li style="padding: 5px;">Giugno:avranno la fortuna di viaggiare molto, per terra e per mare, inoltre è questo il mese dedicato a Giunone, la dea che protegge l'amore e le nozze;</li>
+                    <li style="padding: 5px;">Luglio: annuncia fatiche e lavoro per guadagnarsi la vita;</li>
+                    <li style="padding: 5px;">Agosto: assicura una vita ricca di cambiamenti;</li>
+                    <li style="padding: 5px;">Settembre: porta agli sposi ricchezze e allegria;</li>
+                    <li style="padding: 5px;">Ottobre: porta molto amore ma poco denaro;</li>
+                    <li style="padding: 5px;">Novembre: con tristi giornate, promette invece gioia e felicità; </li>
+                    <li style="padding: 5px;">Dicembre: la neve assicura alla coppia amore eterno. </li>
                 </ul>
                             </p> 
 								
