Prova di commit

--- a/index.html
+++ b/index.html
@@ -46,32 +46,29 @@
     <div class="header">
         <a href="#" id="showMenu"><i class="fa fa-navicon"></i></a>
         <a href="#" id="pageLogo"><img src="images/logo.png" alt="img"></a>
-        <a href="#" id="openMail"><i class="fa fa-envelope-o"></i></a>
+        <a href="contact.html" id="openMail"><i class="fa fa-envelope-o"></i></a>
     </div> 	
     <div class="outer-nav">
         <div class="inner-nav">
             <div class="nav-item">
                 <a href="index.html" class="active-item">
-                    <i class="nav-icon fa fa-home"></i>
                     Home
                 </a>
             </div>
             <div class="nav-item">
                 <a href="#" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-cog"></i>
                     Devi ricordarti che...
                 </a>				
                 <div class="nav-sub-item">
-                    <a href="bouquet.html">Il Bouquet</a>
+                    <font style="color: black;"><a href="bouquet.html">Il Bouquet</a>
                     <a href="fedi.html">Le fedi</a>
                     <a href="confetti.html">I Confetti</a>
                     <a href="giarrettiera.html">La Giarrettiera</a>
-                    <a href="bomboniera.html">La Bomboniera</a>
+                    <a href="bomboniera.html">La Bomboniera</a></font>
                 </div>
             </div>
             <div class="nav-item">
                 <a href="#" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-picture-o"></i>
                     Prima e durante...
                 </a>
 				<div class="nav-sub-item">
@@ -81,7 +78,6 @@
             </div>
             <div class="nav-item">
                 <a href="#" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-files-o"></i>
                     Saper scegliere bene...
                 </a>				
 				<div class="nav-sub-item">
@@ -92,19 +88,16 @@
             </div>
             <div class="nav-item">
                 <a href="anniversari.html">
-                    <i class="nav-icon fa fa-envelope"></i>
                     Gli Anniversari
                 </a>
             </div>
             <div class="nav-item">
                 <a href="contact.html">
-                    <i class="nav-icon fa fa-envelope"></i>
                     Contattaci
                 </a>
             </div>
             <div class="nav-item">
                 <a id="closeMenu" href="#">
-                    <i class="nav-icon fa fa-times"></i>
                     Chiudi
                 </a>
             </div>
@@ -116,28 +109,34 @@
             <div class="slider-container full-bottom">
                 <div class="homepage-slider" data-snap-ignore="true">                
                     <div>
+						<a href="confetti.html">
                         <div class="overlay"></div>
                         <div class="homepage-slider-caption">
                             <h3>I Confetti</h3>
                             <p>La storia e le tradizioni legate ad esso!</p>
                         </div>
                         <img src="images/pictures/3ww.jpg" class="responsive-image" alt="img">
+						</a>
                     </div>
-                    <div>
+                    <div>						
+						<a href="bouquet.html">
                         <div class="overlay"></div>
                         <div class="homepage-slider-caption">
                             <h3>Il Bouquet</h3>
                             <p>Lo sapevate che è un omaggio?</p>
                         </div>
                         <img src="images/pictures/5ww.jpg" class="responsive-image" alt="img">
+						</a>
                     </div>
-                    <div>
+                    <div>					
+						<a href="colore.html">
                         <div class="overlay"></div>
                         <div class="homepage-slider-caption">
                             <h3>Il Colore del vestito</h3>
                             <p>Lo sapevi che...</p>
                         </div>
                         <img src="images/pictures/6ww.jpg" class="responsive-image" alt="img">
+						</a>
                     </div>
                 </div>
             </div>
